Test CirclrCi with new params

--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@
 machine:
    # Set the timezone
   timezone:
-    America/Edmonton 
+    America/Edmonton
 
   # Version of Node to use
   node:
@@ -12,24 +12,28 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
+    - npm run clean #"npm cache clean && npm run rimraf -- node_modules doc coverage dist"
     - npm install --global webpack
     - npm install --global webpack-dev-server
     - npm install --global karma-cli
     - npm install --global protractor
     - npm install --global typescript
-    - npm uninstall webpack --save-dev 
+    - npm uninstall webpack --save-dev
     - npm install webpack@2.1.0-beta.21 --save-dev
     - npm uninstall "@types/selenium-webdriver" --save-dev
     - npm install "@types/selenium-webdriver@2.44.26" --save-dev
-  
+
+    - npm run clean:dist #"npm run rimraf -- dist"
+    - npm run clean:install #"npm set progress=false && npm install"
   override:
-    - npm install
-  
+    - npm run build:prod
+
+
 
 ## Customize test commands
 test:
   override:
-    - npm test
+    - npm run test
 
 ## Custom notifications
 ##notify:
