--- a/circle.yml
+++ b/circle.yml
@@ -12,21 +12,24 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-
-    - npm run clean #"npm cache clean && npm run rimraf -- node_modules doc coverage dist"
+  #"npm cache clean && npm run rimraf -- node_modules doc coverage dist"
+    - npm run clean
+  #"Install global dependencies of framework"
     - npm install --global webpack
     - npm install --global webpack-dev-server
     - npm install --global karma-cli
     - npm install --global protractor
     - npm install --global typescript
-    - npm install 
+  #"Start Installation"
+    - npm install
+  #The following command are necessary to have a successful startup on Linux (it might be temporary and should be fixed in future version of framework)
     - npm uninstall webpack --save-dev
     - npm install webpack@2.1.0-beta.21 --save-dev
     - npm uninstall "@types/selenium-webdriver" --save-dev
     - npm install "@types/selenium-webdriver@2.44.26" --save-dev
+
   override:
     - npm run build:prod
-
 
 
 ## Customize test commands
@@ -34,8 +37,3 @@ test:
   override:
     - npm run test
 
-## Custom notifications
-##notify:
-##  webhooks:
-    # A list of hashes representing hooks. Only the url field is supported.
-##    - url: https://circleci.com/hooks/github
