--- a/circle.yml
+++ b/circle.yml
@@ -37,3 +37,17 @@ test:
   override:
     - npm run test
 
+deployment:
+  staging:
+    branch: master
+    codedeploy:
+      my-app:
+        application_root: /
+        revision_location:
+          revision_type: S3
+          s3_location:
+            bucket: ws-my-bucket
+            key_pattern: apps/my-app-{SHORT_COMMIT}-{BUILD_NUM}
+        region: us-west-2
+        deployment_group: ws-deployment-group
+        deployment_config: CodeDeployDefault.AllAtOnce
