ws third round correct the ws-deployment application name

--- a/circle.yml
+++ b/circle.yml
@@ -35,7 +35,7 @@ deployment:
   staging:
     branch: master
     codedeploy:
-      my-app:
+      ws-deployment:
         application_root: /
         revision_location:
           revision_type: S3
