--- a/circle.yml
+++ b/circle.yml
@@ -36,7 +36,7 @@ deployment:
     branch: master
     codedeploy:
       ws-deployment:
-        application_root: /
+        application_root: /dist
         revision_location:
           revision_type: S3
           s3_location:
