--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/deployment
+    destination: /home/ubuntu/deployment/ws-elements
 hooks:
   BeforeInstall:
     - location: /home/ubuntu/deployment/deploy.sh
